--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <main>
       <div id="game"></div>
       <button id="new">New Game</button>
-      <input type="number" id="x-size" placeholder="X size" value=5 min="2" />
-      <input type="number" id="y-size" placeholder="Y size" value=5 min="2" />
+      <input type="number" id="x-size" placeholder="X size" value="5" min="2" />
+      <input type="number" id="y-size" placeholder="Y size" value="5" min="2" />
     </main>
   </body>
 </html>
