Smaller size & labeling

--- a/index.html
+++ b/index.html
@@ -14,8 +14,26 @@
     <main>
       <div id="game"></div>
       <button id="new">New Game</button>
-      <input type="number" id="x-size" placeholder="X size" value="5" min="2" />
-      <input type="number" id="y-size" placeholder="Y size" value="5" min="2" />
+      <label>
+        x-size:
+        <input
+          type="number"
+          id="x-size"
+          placeholder="X size"
+          value="5"
+          min="2"
+        />
+      </label>
+      <label>
+        y-size:
+        <input
+          type="number"
+          id="y-size"
+          placeholder="Y size"
+          value="5"
+          min="2"
+        />
+      </label>
     </main>
   </body>
 </html>
