Add moves counter

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <main>
+      <p id="moves">moves: <span id="moveContent">0</span></p>
       <div id="game"></div>
       <button id="new">New Game</button>
       <label>
